Bug 1692380 - The intrinsic min isize of the marquee scroller should be zero. r=dholbert, a=RyanVM

I couldn't come up with a way to effectively cause this effect with
regular CSS I could put in marquee.css... But this matches the legacy
xul behavior and the chrome behavior, which should be compatible.

This undoes a reftest expectation change I included in bug 1618584. Our
behavior in those tests before this patch matches Safari, but Safari
passes the test I'm adding on this bug, so it is somewhat inconsistent.

Differential Revision: https://phabricator.services.mozilla.com/D105045